# Asrdc

./: .gitignore  Cargo.toml  REDME.md
.github/workflow/: flow.yml
.github/workflows/: main.yml
config/log/: log.2024-10-06
src/: lib.rs  log.rs  main.rs
src/api/: mod.rs  write.rs
src/api/middleware/: serve.rs
src/api/v1/: mod.rs
src/api/v1/controllers/: mod.rs  poll.rs
src/api/v1/controllers/docker/: images.rs  mod.rs  volumes.rs
src/docker/: clients.rs  config.rs  metadata.rs  mod.rs
src/docker/service/: images.rs  mod.rs  networks.rs  volumes.rs
src/docker/tests/: images_test.rs  mod.rs
web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/component/: HomeHeader.tsx  HomeSidebar.tsx
web/init/: main.tsx
web/less/: app.less  auth.less
web/router/: BasicRouter.tsx
web/server/: Apis.tsx
web/server/docker/: impl.tsx
web/store/: ZustandStarter.tsx
web/view/Auth/: Layout.tsx  Login.tsx
web/view/Home/: Layout.tsx
